--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="style.css">
     <title>Netflix Clone</title>
 </head>
@@ -14,7 +14,7 @@
                 <img src="assets/logo.png">
                     </div>
                     <div class="buttons">
-                <button class="lng">English<img src="assets/down-icon.png"></button>
+                <button class="lng">Eng<img src="assets/down-icon.png"></button>
              <button class="btn">Sign In</button>
         </div>
         </div>
